--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,12 +7,15 @@
         <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
                 integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
                 crossorigin=""></script>
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-      <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-      <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
-      <link rel="stylesheet" href="css/style.css"/>
-      <script src="js/main.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <link rel="stylesheet" href="css/style.css"/>
+        <script src="js/main.js"></script>
+
+        <!-- JSGRID -->
+        <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
+        <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
+
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
     </head>
     <body>
 
@@ -28,6 +31,6 @@
             }).addTo(mymap);
         </script>
 
-        <div id="jsGrid"></div>
+    <div id="jsGrid"></div>
     </body>
 </html>
