--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 
         <h1>My First Heading</h1>
 
-        <div id="mapid" style="height:600px"></div>
+        <!--<div id="mapid" style="height:600px"></div>-->
 
         <script>
             var mymap = L.map('mapid').setView([59.9, 30.505], 13);
