--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,10 @@
     </head>
     <body>
 
-        <h1>My First Heading</h1>
+        <h1>Data info</h1>
+        <div id="complexesInfo"></div>
+        <div id="apartmentsInfo"></div>
+        <hr>
 
         <div id="mapid" style="height:600px"></div>
 
